# Ruscord

./: Cargo.toml
src/: cmd.rs  commands.rs  discord.rs  env.rs  events.rs  main.rs  settings.rs
src/cmd/: age.rs  ping.rs  player.rs
src/commands/: age.rs  ping.rs  player.rs
src/discord/: events.rs
